# simple_linkfunc_app

./: CMakeLists.txt  README.md
resources/: app_config.json
src/main/: main.cpp
